[package]
name = "webt"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "libs for web"
homepage = "https://github.com/KByys/webt.git"
[dependencies]
axum = { version = "0.6.20", optional = true }
base64 = "0.21.5"
hyper = "0.14.27"
serde = { version = "1.0.192" }
serde_json = "1.0.108"
url = "2.4.1"
reqwest = { version = "0.11.22", features = [
    "json",
    "multipart",
], default-features = false, optional = true}
fdir = "0.1.9"


[features]
request = ["reqwest"]