[package]
name = "webt"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "libs for web"
homepage = "https://github.com/KByys/webt.git"
[dependencies]
axum = { version = "0.6.20" }
base64 = "0.21.5"
serde = { version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
url = "2.4.1"
reqwest = { version = "0.11.22", features = [
    "json",
    "multipart",
], default-features = false, optional = false }
fdir = "0.1.9"
mime = "0.3.17"


[features]
# request = ["reqwest"]
